<resources>
    <string name="app_name">"Traffic Ruler "</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">User name</string>
    <string name="password">password</string>
    <string name="login_text">Login</string>
    <string name="login">Sign In</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="select_car_text">Select Car</string>
    <string name="car_select_label">Car Selection Panel</string>
    <string name="select_wh_button">Warehouse</string>
    <string name="warehouse_label">Warehouse Panel</string>
    <string name="settings">Settings</string>
    <string name="settings_label">Settings Panel</string>
    <string name="app_name1">"Settings Options"</string>
    <string name="settings_button">"Button Settings Options"</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="Vehicle_Adapter_Activity">Vechicle Adapter Activity</string>

    <string name="accessories">Accessories</string>
    <string name="outfits">Outfits</string>
    <string name="hair">Hair</string>

    <string name="select_tune_up_button">Tune Up</string>
    <string name="select_tune_up_panel">Tune Up Panel</string>
    <string name="select_appearance_button">Appearance</string>
    <string name="apperance_panel">Appearance Panel</string>
    <string name="tune_engine_text">Tune Engine</string>
    <string name="upgrade_handling_button">Upgrade Handling</string>
    <string name="improve_acceleration_text">Improve Acceleration</string>

    <string-array name="planets_array">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>

    </string-array>
    <string name="title_activity_game_type">GameType</string>
</resources>
