<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_fragement"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
    android:id="@+id/editText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/textView"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="38dp"
    android:ems="10"
    android:inputType="textEmailAddress"
    android:text="@string/user_name" />

    <EditText
    android:id="@+id/editText2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/editText"
    android:layout_alignStart="@+id/editText"
    android:layout_below="@+id/editText"
    android:layout_marginTop="50dp"
    android:ems="10"
    android:inputType="textPassword" />

    <TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="54dp"
    android:text="@string/sign_in"
    android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
    android:id="@+id/signin_button"
    style="?android:textAppearanceSmall"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignEnd="@+id/editText2"
    android:layout_alignLeft="@+id/editText2"
    android:layout_alignRight="@+id/editText2"
    android:layout_alignStart="@+id/editText2"
    android:layout_below="@+id/editText2"
    android:layout_marginTop="40dp"
    android:text="@string/login"
    android:textStyle="bold" />

</RelativeLayout>