<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tune_engine_text"
        android:id="@+id/tune_up_engine_button"
        android:minHeight="50dp"
        android:textSize="15sp"
        android:layout_above="@+id/upgrade_handling_button"
        android:layout_marginBottom="49dp"
        android:layout_alignLeft="@+id/upgrade_handling_button"
        android:layout_alignStart="@+id/upgrade_handling_button"
        android:layout_alignRight="@+id/upgrade_handling_button"
        android:layout_alignEnd="@+id/upgrade_handling_button"
        android:onClick="OnTuneUpLevelClick"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upgrade_handling_button"
        android:id="@+id/upgrade_handling_button"
        android:minHeight="60dp"
        android:textSize="15sp"
        android:layout_centerVertical="true"
        android:onClick="OnTuneUpLevelClick"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/improve_acceleration_text"
        android:id="@+id/improve_acceleration_button"
        android:minHeight="50dp"
        android:textSize="14sp"
        android:layout_below="@+id/upgrade_handling_button"
        android:layout_alignLeft="@+id/upgrade_handling_button"
        android:layout_alignStart="@+id/upgrade_handling_button"
        android:layout_marginTop="84dp"
        android:onClick="OnTuneUpLevelClick"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:id="@+id/backbuttontune"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        />


</RelativeLayout>
